--- a/pricechecker-frontend/user/assets/css/custom.css
+++ b/pricechecker-frontend/user/assets/css/custom.css
@@ -1,5 +1,5 @@
 nav .navbar-brand{
-    margin-right: 50px;
+    margin-right: 20px;
 }
 .img-fluid, .popular-image{
     width: 150px;
@@ -34,4 +34,16 @@ thead tr th{
 }
 tbody tr td{
     text-align: center;
+}
+
+.my-loading{
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background: rgba(100,100,100,0.4);
+    z-index: 9999;
+    top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
