--- a/pricechecker-frontend/user/assets/css/style.css
+++ b/pricechecker-frontend/user/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
 *{
 	margin: 0;
@@ -20,13 +18,13 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0,0);
 	z-index: -1;
 }
 .home .carousel-item .container{
 	position: absolute;
 	left: 50%;
-	top:50%;
+	top:30%;
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
@@ -36,6 +34,8 @@
 	color: #fff;
 	margin: 0 0 10px;
 	opacity: 0;
+	stroke: #0c0c0c;
+	stroke-width: 12px;
 }
 .home .carousel-item p{
 	font-family: "poppins", sans-serif;
@@ -65,8 +65,8 @@
 	margin: 0;
 }
 .home .carousel-indicators li{
-	width: 70px;
-	height: 70px;
+	width: 40px;
+	height: 40px;
 	margin: 0 5px;
 	border-radius: 50%;
 	background-position: center;
@@ -76,7 +76,7 @@
 }
 .home .carousel-control-next img,
 .home .carousel-control-prev img{
-	width: 30px;
+	width: 15px;
 }
 .home .carousel-control-next{
 	right: -90px;
