--- a/pricechecker-frontend/user/include/header.html
+++ b/pricechecker-frontend/user/include/header.html
@@ -74,7 +74,7 @@
                     <!-- Nav -->
                     <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar u-header__navbar--no-space">
                         <a id="navbar-brand" class="navbar-brand" href="/pricechecker-frontend/user/">
-                            <h2>PriceChecker</h2>
+                            <h4>PriceChecker</h4>
                         </a>
                         <!-- Navigation -->
                         <div class="collapse navbar-collapse u-header__navbar-collapse">
@@ -89,18 +89,21 @@
                                     <a id="nav-fav-a" class="nav-link u-header__nav-link" onclick="onClickedFavs()">Wish List</a>
                                 </li>
                                 <!-- End Favourites-->
+                                <li id="nav-profile-li" class="nav-item u-header__nav-item">
+                                    <a id="nav-profile-a" class="nav-link u-header__nav-link" onclick="onClickedMyProfile()">My Profile</a>
+                                </li>
                                 <!-- User Profiles Section -->
-                                <li id="nav-profile-li" class="nav-item hs-has-sub-menu u-header__nav-item"
+                                <li id="nav-myproduct-li" class="nav-item hs-has-sub-menu u-header__nav-item"
                                     data-event="hover"
                                     data-animation-in="slideInUp"
                                     data-animation-out="fadeOut">
-                                    <a id="blogMegaMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle" href="javascript:;" aria-haspopup="true" aria-expanded="false" aria-labelledby="blogSubMenu">Profiles</a>
+                                    <a id="blogMegaMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle" href="javascript:;" aria-haspopup="true" aria-expanded="false" aria-labelledby="blogSubMenu">My Products</a>
 
                                     <!-- Blog - Submenu -->
                                     <ul id="blogSubMenu" class="hs-sub-menu u-header__sub-menu" aria-labelledby="blogMegaMenu" style="min-width: 230px;">
                                         <li><a class="nav-link u-header__sub-menu-nav-link" onclick="onClickedRecent()">Recent Visited Products</a></li>
                                         <li><a class="nav-link u-header__sub-menu-nav-link" onclick="onClickedTrackNav()">Track Product's Prices</a></li>
-                                        <li><a class="nav-link u-header__sub-menu-nav-link" onclick="onClickedMyProfile()">My Profile</a></li>
+                                        <!--<li><a class="nav-link u-header__sub-menu-nav-link" onclick="onClickedMyProfile()">My Profile</a></li>-->
                                     </ul>
                                     <!-- End Submenu -->
                                 </li>
@@ -225,14 +228,14 @@
                         <div class="input-group">
                             <input class="form-control py-2 pl-5 font-size-15 border-0 height-40 rounded-left-pill" id="search-product" placeholder="Search for Products" aria-label="Search for Products" aria-describedby="searchProduct1" required>
                             <div class="input-group-append">
-                                <!-- Select -->
-                                <select class="js-select selectpicker dropdown-select custom-search-categories-select"
-                                        data-style="btn height-40 text-gray-60 font-weight-normal border-0 rounded-0 bg-white px-5 py-2">
-                                    <option value="one" selected>All Categories</option>
-                                    <option value="two">Product Name</option>
-                                    <option value="three">Brand</option>
-                                </select>
-                                <!-- End Select -->
+                                <!--&lt;!&ndash; Select &ndash;&gt;-->
+                                <!--<select class="js-select selectpicker dropdown-select custom-search-categories-select"-->
+                                        <!--data-style="btn height-40 text-gray-60 font-weight-normal border-0 rounded-0 bg-white px-5 py-2">-->
+                                    <!--<option value="one" selected>All Categories</option>-->
+                                    <!--<option value="two">Product Name</option>-->
+                                    <!--<option value="three">Brand</option>-->
+                                <!--</select>-->
+                                <!--&lt;!&ndash; End Select &ndash;&gt;-->
                                 <button class="btn btn-dark height-40 py-2 px-3 rounded-right-pill" type="button" onclick="onClickedSearch()" >
                                     <span class="ec ec-search font-size-24"></span>
                                 </button>
